Add handler for shaders

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -6,8 +6,11 @@ set(HEADER_FILES
     src/iapplication.h
     src/application.h
     src/tools/color.h
-    src/shaders/shaderloader.h
-    src/fileLoader/ifileloader.h
+    src/fileLoader/fileloader.h
+    src/scene/scene.h
+    src/shader/ishaderwrapper.h
+    src/shader/shader.h
+    src/shader/program.h
 )
 
 # Add source files
@@ -15,7 +18,10 @@ set(SOURCE_FILES
     src/main.cpp
     src/mainwindow.cpp
     src/application.cpp
-    src/shaders/shaderloader.cpp
+    src/fileLoader/fileloader.cpp
+    src/scene/scene.cpp
+    src/shader/shader.cpp
+    src/shader/program.cpp
 )
 
 include_directories(
@@ -23,5 +29,14 @@ include_directories(
     "${CMAKE_SOURCE_DIR}/app/src"
 )
 
+# we don't want to copy if we're building in the source dir
+if (NOT CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
+    add_custom_target(copy_resources ALL
+       ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/resources ${CMAKE_CURRENT_BINARY_DIR}/resources
+       DEPENDS ${PROJECT_NAME}
+       )
+endif()
+
 # Define the executable
-add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
+add_executable(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES} )
+
