Add SOIL library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,14 @@ include_directories(
 )
 
 set(GLFW_LIBRARY "${CMAKE_SOURCE_DIR}/library/lib/glfw3.lib")
+set(SOIL_LIBRARY "${CMAKE_SOURCE_DIR}/library/lib/soil.lib")
 
 # GLAD
 add_library(GLAD "${CMAKE_SOURCE_DIR}/library/lib/glad.c")
 
 target_link_libraries(${PROJECT_NAME}
         ${GLFW_LIBRARY}
+        ${SOIL_LIBRARY}
         opengl32
         GLAD
 )
