Add model loader

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project(SimpleOGL)
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/app)
 
+include_directories(
+    "${CMAKE_SOURCE_DIR}/app/src"
+)
+
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
@@ -20,8 +24,7 @@ target_link_libraries(${PROJECT_NAME} glad)
 add_subdirectory(3rdparty/glm)
 target_link_libraries(${PROJECT_NAME} glm)
 
-include_directories(
-    "${CMAKE_SOURCE_DIR}/3rdparty/soil"
-)
+add_subdirectory(3rdparty/assimp)
+target_link_libraries(${PROJECT_NAME} assimp)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
