--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "3rdparty/assimp"]
-	path = 3rdparty/assimp
+	path = libs/assimp
 	url = https://github.com/assimp/assimp.git
 [submodule "3rdparty/glfw"]
-	path = 3rdparty/glfw
+	path = libs/glfw
 	url = https://github.com/glfw/glfw.git
 [submodule "3rdparty/glm"]
-	path = 3rdparty/glm
+	path = libs/glm
 	url = https://github.com/g-truc/glm.git
