Add the Phong reflection model
Add the assimp library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,6 @@ project(SimpleOGL)
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/app)
 
-include_directories(
-    "${CMAKE_SOURCE_DIR}/app/src"
-)
-
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
 set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
@@ -18,10 +14,13 @@ set(GLFW_INSTALL OFF CACHE BOOL "" FORCE)
 add_subdirectory(libs/glfw)
 target_link_libraries(${PROJECT_NAME} glfw)
 
-add_subdirectory(libs/glad)
+add_subdirectory(libs/3rdparty/glad)
 target_link_libraries(${PROJECT_NAME} glad)
 
 add_subdirectory(libs/glm)
 target_link_libraries(${PROJECT_NAME} glm)
+
+add_subdirectory(libs/assimp)
+target_link_libraries(${PROJECT_NAME} assimp)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
