--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,9 @@
-[submodule "3rdparty/glfw"]
+[submodule "glfw"]
 	path = libs/glfw
 	url = https://github.com/glfw/glfw.git
-[submodule "3rdparty/glm"]
+[submodule "glm"]
 	path = libs/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "assimp"]
+	path = libs/assimp
+	url = https://github.com/assimp/assimp.git
